Change tracking_code to 24 number formatd
